--- a/app/assets/stylesheets/modules/_registrations.new.scss
+++ b/app/assets/stylesheets/modules/_registrations.new.scss
@@ -1,30 +1,17 @@
 .registrations-new{
   width: 100%;
-  height: 220vh;
+  height: 100%;
   background: #f5f5f5;
   a{
     display: none
   }
-  &__header{
-    &__logo{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: auto;
-      height: 121px;
-      img{
-        height: 45px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-    }
-    &__stauts-bar{ 
-    }
+  &__head{
+    height: 40px;
   }
   &__wrapper{
     &__box{
       width: 700px;
-      height: 1100px;
+      height: 68rem;
       margin-right: auto;
       margin-left: auto;
       margin-bottom: 38px;
