--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,6 @@
 .registrations-new
 
-  .registrations-new__header
-    .registrations-new__header__logo
-      = image_tag 'logo/logo.png'
-    .registrations-new__header__status-bar
-
+  .registrations-new__head
   .registrations-new__wrapper
     .registrations-new__wrapper__box
       .registrations-new__wrapper__box__nav
@@ -15,10 +11,10 @@
             = render "devise/shared/error_messages", resource: resource
 
             .registrations-new__wrapper__box__form__set__nickname
-              = f.label :email
+              = f.label :nickname
               %span.form-require 必須
               %br/
-              = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: '例）フリマ太郎'
+              = f.text_field :email, autofocus: true, autocomplete: "email", placeholder: '例）フリマ太郎'
             
             .registrations-new__wrapper__box__form__set__email
               = f.label :email
@@ -79,6 +75,8 @@
                 = f.email_field :email, autofocus: true, autocomplete: "email"
                 %p 年
                 
+
+                
               .registrations-new__wrapper__box__form__set__birthdate__month
                 = f.label :email
                 %br/
@@ -113,16 +111,5 @@
             .registrations-new__wrapper__box__form__set__actions
               = f.submit "商品送付先の入力画面へ"
 
-    .registrations-new__footer
-      .registrations-new__footer__desc
-        プライバシーポリシー
-        %br/
-        メルカリ利用規約
-        %br/
-        特定商取引に関する表記
-      .registrations-new__footer__logo
-        = image_tag 'logo/logo-white.png'
-        .registrations-new__footer__logo__desc
-          © Mercari, Inc.
           
   = render "devise/shared/links"
