--- a/app/views/home/_pickup_category.html.haml
+++ b/app/views/home/_pickup_category.html.haml
@@ -9,15 +9,16 @@
           %h3.products--head-title 新規投稿商品
       .pickup_category__containerCategory__product--lists
         - @products.each do |product|
-          .pickup_category__containerCategory__product--lists__list
-            %figure.pickup_category__product__images
-              = image_tag "https://static.mercdn.net/item/detail/orig/photos/m26688514106_1.jpg?1579836989", class: "pickup_category__product__images--image"
-            .pickup_category__containerCategory__product--lists__list--body
-              %h3.pickup_category__product--name
-                = product.name
-              .pickup_category__containerCategory__product--lists__list--body__details
-                %ul.pickup_category__details__menu
-                  %li
-                    = "#{product.price}円"
-                  %li ★
-              %p.pickup_category__taxIncluded （税込）
+          = link_to product_path(product.id) do
+            .pickup_category__containerCategory__product--lists__list
+              %figure.pickup_category__product__images
+                = image_tag "https://static.mercdn.net/item/detail/orig/photos/m26688514106_1.jpg?1579836989", class: "pickup_category__product__images--image"
+              .pickup_category__containerCategory__product--lists__list--body
+                %h3.pickup_category__product--name
+                  = product.name
+                .pickup_category__containerCategory__product--lists__list--body__details
+                  %ul.pickup_category__details__menu
+                    %li
+                      = "#{product.price}円"
+                    %li ★
+                %p.pickup_category__taxIncluded （税込）
