--- a/app/views/credit_cards/new.html.haml
+++ b/app/views/credit_cards/new.html.haml
@@ -9,8 +9,7 @@
       = text_field_tag 'payment_card_no', "", class: 'cardnumber', id: "payment_card_no", placeholder: '半角数字のみ', type: "text", maxlength: "16"
     -# 事前にassets/imagesにcardsファイルを作成
     .image
-      = image_tag(image_path('cards/visa.png'), class: 'visa')
-      = image_tag(image_path('cards/master.png'), class: 'master')
+      = image_tag 'icon/visa.gif', height: '60', width: '60', class: 'visa'
 
     .expirationdate
       .expirationdate__details
